# postflop-solver

./: .gitignore  CHANGES.md  Cargo.toml  Makefile  README.md  main.rs.tpl
.github/workflows/: rust.yml
examples/: basic.rs  file_io.rs  main.rs.tpl  node_locking.rs
src/: action_tree.rs  alloc.rs  atomic_float.rs  bet_size.rs  bunching.rs  card.rs  file.rs  game.rs  hand.rs  hand_table.rs  interface.rs  interpreter.rs  lib.rs  mutex_like.rs  node.rs  range.rs  sliceop.rs  solver.rs  utility.rs
src/game/: base.rs  evaluation.rs  interpreter.rs  mod.rs  node.rs  serialization.rs  tests.rs
tests/: kuhn.rs  leduc.rs
