[package]
name = "postflop-solver"
version = "0.1.0"
authors = ["Wataru Inariba"]
edition = "2021"
description = "An open-source postflop solver for Texas hold'em poker"
documentation = "https://b-inary.github.io/postflop_solver/postflop_solver/"
repository = "https://github.com/b-inary/postflop-solver"
license = "AGPL-3.0-or-later"

[dependencies]
bincode = { version = "2.0.0-rc.1", optional = true }
once_cell = "1.13.0"
rayon = { version = "1.5.3", optional = true }
regex = "1.6.0"

[features]
default = ["rayon"]
custom-alloc = []
